--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0;
+  background-color: #212121;
   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -44,4 +45,53 @@ code {
   .bg{
     background: #212121c0;
   }
+
+  body{
+    scroll-behavior: smooth;
+    scroll-snap-align: center;
+    scroll-snap-type: x mandatory;
+    scroll-snap-stop: always;
+  }
+
+  .gallery{
+    
+    scroll-snap-type: x mandatory;
+  }
+
+  /* .gallery::-webkit-scrollbar{
+    width: 0px;
+    height: 0px;
+  } */
+
+ 
+}
+.imgclass{
+  height: 500px;
+}
+.gallery{
+  overflow: auto;
+}
+
+.gallery::-webkit-scrollbar{
+  width: 5px;
+  height: 5px;
+}
+
+.gallery::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+
+.gallery::-webkit-scrollbar-thumb{
+  background-color: white;
+  border-radius: 10px;
+}
+
+
+.img-responsive{
+  width: 350px !important;
+}
+
+.gallery-item {
+  margin: 25px;
+  width: 350px !important;
 }
