--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,19 @@ code {
   width: 350px !important;
 }
 
+.burgerMenu{
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.bar{
+  width: 40px;
+  height: 8px;
+  background-color: #FFF;
+  border-radius: 5px;
+}
