--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -2,7 +2,7 @@
 /* main container */
 .gallery-wrap{
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, auto) !important;
     grid-auto-rows: 300px;
     gap: 20px;
 
@@ -19,6 +19,7 @@ body.modal-open {
     height: 100%;
     border-radius: 10px;
     overflow: hidden;
+    cursor: pointer;
 }
 
 /* image thumbnail */
