--- a/src/index.css
+++ b/src/index.css
@@ -106,9 +106,30 @@ code {
   cursor: pointer;
 }
 
-.bar{
-  width: 40px;
-  height: 8px;
-  background-color: #FFF;
-  border-radius: 5px;
+
+
+
+.dashboard{
+  width: 100%;
+  padding: 20px 10px 20px 10px;
+  background-color: #212121;
+  color: white;
+  position: absolute;
+  top: 80px;
+  right: -100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 30px;
+
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+
+
+  transition: all 0.4s ease;
+}
+
+.dashboard_active{
+  right: 0;
+  transition: all 0.4s ease;
 }
