--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -1,11 +1,10 @@
-
 /* main container */
 .gallery-wrap{
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, calc(33.33% - 20px));
     grid-auto-rows: 300px;
     gap: 20px;
-
+    justify-content: center;
     padding: 50px;
 }
 
@@ -192,7 +191,7 @@ body.modal-open {
 
 @media (max-width:1200px) {
     .gallery-wrap{
-        grid-template-columns: repeat(2, auto);
+        grid-template-columns: repeat(2, calc(50% - 10px));
         grid-auto-rows: 150px;
         gap: 10px;
         padding-top:30px;
